--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <p class="logo-name">SMART FIT</p>
         <nav id="nav-bar">
           <ul id="nav-ul">
-            <li><a class="nav-link" href="#video">PRODUCT</a></li>
-            <li><a class="nav-link" href="#video">FEATURES</a></li>
-            <li><a class="nav-link" href="#reviews">REVIEWS</a></li>
-            <li><a class="nav-link" href="#blog">BLOG</a></li>
+            <li><a class="nav-link" href="#products">PRODUCT</a></li>
+            <li><a class="nav-link" href="#features">FEATURES</a></li>
+            <li><a class="nav-link" href="#video">MANUAL</a></li>
+            <li><a class="nav-link" href="#essential">ESSENTIALS</a></li>
             <li><a class="nav-link" href="#form">PRE-ORDER NOW</a></li>
           </ul>
         </nav>
@@ -46,7 +46,7 @@
             />
           </div>
         </header>
-        <form id="form" action="https://www.freecodecamp.com/email-submit">
+        <form id="form" action="#">
           <label for="email"
             >WHY MORE WAIT TO INITIATE THE FUTURE JUST SIGNUP</label
           >
@@ -746,4 +746,3 @@
     </main>
   </body>
 </html>
-
